# baloo-widgets

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  BalooWidgetsConfig.cmake.in  CMakeLists.txt  COPYING.README  KF5BalooWidgetsConfig.cmake.in  KFBalooWidgetsConfig.cmake.in  Mainpage.dox  Messages.sh  NepomukWidgetsConfig.cmake.in  baloo-widgets.categories  metainfo.yaml  nepomukwidgets_export.h
autotests/: CMakeLists.txt  extractortest.cpp  extractortest.h  filemetadatadatedisplaytest.cpp  filemetadatadatedisplaytest.h  filemetadataitemcounttest.cpp  filemetadataitemcounttest.h  filemetadatamergedatatest.cpp  filemetadatamergedatatest.h  filemetadatawidgettest.cpp  filemetadatawidgettest.h  testtagged.m4a  widgetfactorytest.cpp  widgetfactorytest.h
po/ar/: baloowidgets5.po
po/ast/: baloowidgets5.po
po/az/: baloowidgets5.po
po/bg/: baloowidgets5.po
po/bs/: baloowidgets5.po
po/ca/: baloowidgets5.po
po/ca@valencia/: baloowidgets5.po
po/cs/: baloowidgets5.po
po/da/: baloowidgets5.po
po/de/: baloowidgets5.po
po/el/: baloowidgets5.po
po/en_GB/: baloowidgets5.po
po/eo/: baloowidgets5.po
po/es/: baloowidgets5.po
po/et/: baloowidgets5.po
po/eu/: baloowidgets5.po
po/fi/: baloowidgets5.po
po/fr/: baloowidgets5.po
po/ga/: baloowidgets5.po
po/gl/: baloowidgets5.po
po/he/: baloowidgets5.po
po/hi/: baloowidgets5.po
po/hu/: baloowidgets5.po
po/ia/: baloowidgets5.po
po/id/: baloowidgets5.po
po/it/: baloowidgets5.po
po/ja/: baloowidgets5.po
po/ka/: baloowidgets5.po
po/kk/: baloowidgets5.po
po/ko/: baloowidgets5.po
po/lt/: baloowidgets5.po
po/lv/: baloowidgets5.po
po/ml/: baloowidgets5.po
po/mr/: baloowidgets5.po
po/nb/: baloowidgets5.po
po/nds/: baloowidgets5.po
po/nl/: baloowidgets5.po
po/nn/: baloowidgets5.po
po/pa/: baloowidgets5.po
po/pl/: baloowidgets5.po
po/pt/: baloowidgets5.po
po/pt_BR/: baloowidgets5.po
po/ro/: baloowidgets5.po
po/ru/: baloowidgets5.po
po/sa/: baloowidgets5.po
po/sk/: baloowidgets5.po
po/sl/: baloowidgets5.po
po/sr/: baloowidgets5.po
po/sr@ijekavian/: baloowidgets5.po
po/sr@ijekavianlatin/: baloowidgets5.po
po/sr@latin/: baloowidgets5.po
po/sv/: baloowidgets5.po
po/ta/: baloowidgets5.po
po/tr/: baloowidgets5.po
po/ug/: baloowidgets5.po
po/uk/: baloowidgets5.po
po/zh_CN/: baloowidgets5.po
po/zh_TW/: baloowidgets5.po
src/: CMakeLists.txt  extractor.cpp  extractorutil_p.h  filefetchjob.cpp  filefetchjob.h  filemetadataconfigwidget.cpp  filemetadataconfigwidget.h  filemetadataprovider.cpp  filemetadataprovider.h  filemetadataprovider_p.h  filemetadatautil.cpp  filemetadatautil_p.h  filemetadatawidget.cpp  filemetadatawidget.h  filemetadatawidget_p.h  groupedlineedit.cpp  groupedlineedit.h  indexeddataretriever.cpp  indexeddataretriever.h  kblocklayout.cpp  kblocklayout.h  kcommentwidget.cpp  kcommentwidget_p.h  keditcommentdialog.cpp  keditcommentdialog.h  kedittagsdialog.cpp  kedittagsdialog_p.h  knfotranslator.cpp  knfotranslator_p.h  metadatafilter.cpp  metadatafilter.h  ondemandextractor.cpp  ondemandextractor.h  querybuilder.cpp  querybuilder.h  querybuildercompleter.cpp  querybuildercompleter_p.h  tagcheckbox.cpp  tagcheckbox.h  tagwidget.cpp  (+6 more)
src/filepropertiesplugin/: CMakeLists.txt  baloofilepropertiesplugin.cpp  baloofilepropertiesplugin.desktop  baloofilepropertiesplugin.h  baloofilepropertiesplugin.json
src/naturalqueryparser/: CMakeLists.txt  naturalqueryparser.cpp  naturalqueryparser.h  pass_comparators.h  pass_dateperiods.cpp  pass_dateperiods.h  pass_datevalues.cpp  pass_datevalues.h  pass_decimalvalues.cpp  pass_decimalvalues.h  pass_filenames.cpp  pass_filenames.h  pass_filesize.cpp  pass_filesize.h  pass_numbers.cpp  pass_numbers.h  pass_periodnames.cpp  pass_periodnames.h  pass_properties.cpp  pass_properties.h  pass_propertyinfo.h  pass_splitunits.cpp  pass_splitunits.h  pass_subqueries.cpp  pass_subqueries.h  pass_typehints.cpp  pass_typehints.h  patternmatcher.h  utils.cpp  utils.h
src/naturalqueryparser/autotests/: CMakeLists.txt  naturalqueryparsertest.cpp
src/tagsfileitemactionplugin/: CMakeLists.txt  Messages.sh  tagsfileitemaction.cpp  tagsfileitemaction.h  tagsfileitemaction.json
test/: CMakeLists.txt  dynamicresourcefacettest.cpp  dynamicresourcefacettest.h  facetmodeltest.cpp  metadataconfigwidgetapp.cpp  metadatawidgetapp.cpp  metadatawidgettest.cpp  metadatawidgettest.h  proxyfacettest.cpp  qtest_querytostring.h  querybuilderapp.cpp  simplefacettest.cpp  tagwidgetapp.cpp  tagwidgettest.cpp  tagwidgettest.h  typefacettest.cpp
ui/: filemetadataconfigwidget.cpp  filemetadataconfigwidget.h  filemetadataprovider.cpp  filemetadataprovider_p.h  filemetadatawidget.cpp  filemetadatawidget.h  indexeddataretriever.cpp  indexeddataretriever.h  kedittagsdialog.cpp  kedittagsdialog_p.h  knfotranslator.cpp  metadatafilter.cpp  metadatafilter.h  nepomukmassupdatejob.cpp  nepomukmassupdatejob.h  resourceloader.cpp  resourceloader.h  tagcheckbox.cpp  tagcheckbox.h  tagwidget.cpp  tagwidget.h  tagwidget_p.h  widgetfactory.cpp  widgetfactory.h
utils/: datefacet.cpp  datefacet.h  daterange.cpp  dynamicresourcefacet.cpp  dynamicresourcefacet.h  dynamicresourcefacet_p.h  facet.cpp  facet.h  facetdelegate.cpp  facetdelegate.h  facetfiltermodel.cpp  facetfiltermodel.h  facetmodel.cpp  facetmodel.h  facetwidget.cpp  facetwidget.h  proxyfacet.cpp  proxyfacet.h  resourcemodel.cpp  resourcemodel.h  searchlineedit.cpp  searchlineedit.h  searchwidget.cpp  searchwidget.h  searchwidget_p.h  simplefacet.cpp  simplefacet.h  simpleresourcemodel.cpp  simpleresourcemodel.h  typefacet.cpp  typefacet.h  utils.cpp  utils.h
